# investing-pal

./: LICENSE  README.md  architecture.md  architecture.mdj  pyproject.toml
investing_pal/: __init__.py
investing_pal/app/bond_calculator/: main.py
investing_pal/data/: capabilities.py  ids.py  source.py  value.py
investing_pal/finances/: currency.py  interest.py
investing_pal/institutions/: account.py  broker.py
investing_pal/instruments/: common.py  instrument.py
investing_pal/instruments/money/: cash.py
investing_pal/instruments/securities/commodity/: etc.py
investing_pal/instruments/securities/debt/: bond.py
investing_pal/instruments/securities/equity/: etf.py  stock.py
investing_pal/market/: account.py  broker.py  data.py  ideas.py  institution.py  transaction.py
investing_pal/money/: cash.py
investing_pal/securities/: bond.py
